--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,6 +328,9 @@
 
 <div class="content" role="main">
 
+  <!-- Donut Chart -->
+  <donut-chart></donut-chart>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
